Squashed commit of the following:
commit 7809a8af6357d6f238f88c61a619f6a4626668bc
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sun Sep 24 20:10:37 2023 -0700

    update readme

commit f127ac00d0c9b01432a383b0042ddeaac8c5c70e
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Sep 23 15:26:03 2023 -0700

    fixes

commit 39caae3d46903d458b44cb93ec02277c0a99fdd9
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Sep 23 12:06:29 2023 -0700

    Update README.md

commit cc21acdffb9512adfe07390868da693a91b42982
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Sep 23 12:05:40 2023 -0700

    Update README.md

commit 5739ea4e45fa4563549db196d6fa71a2b3bedce0
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Sep 23 12:02:58 2023 -0700

    fixes and readme update

commit 67279e98af7970c775a73e03ab7d41202cf9c3e6
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Sep 23 11:56:22 2023 -0700

    update comments

commit aae0a92a515a042e188946bc3927e5bdf11f915f
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Sep 23 11:30:17 2023 -0700

    Remove local

commit abb08a79ad54bf6aa3fb5be5f42d58491be992a5
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Sep 9 20:55:06 2023 -0700

    docker compose changes

commit 22967e314aad6dd00c4032cf554f4a49bb808098
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Sep 9 14:52:21 2023 -0700

    build fixes

commit 373f59461159dd14eabcde82fcdaf305a2ca5b6f
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Sep 9 00:57:05 2023 -0700

    docker changes

commit 06a40767a34187259f5c41c108600e5e006828b4
Author: Viren Baraiya <virenx@gmail.com>
Date:   Wed Sep 6 21:57:12 2023 -0700

    local container for conductor

commit b01460b80bd06f5af3006c9d0ba99fad9b3a3b74
Author: Viren Baraiya <virenx@gmail.com>
Date:   Tue Sep 5 23:38:21 2023 -0700

    removed old compose

commit fd23d226549fd797baefa1309117bd9489430a48
Author: Viren Baraiya <virenx@gmail.com>
Date:   Tue Sep 5 23:34:48 2023 -0700

    restore compose files

c

--- a/docker/docker-compose-mysql.yaml
+++ b/docker/docker-compose-mysql.yaml
@@ -4,11 +4,12 @@ services:
 
   conductor-server:
     environment:
-      - CONFIG_PROP=config-mysql-grpc.properties
+      - conductor.db.type=redis_standalone
+      - conductor.redis.hosts=rs:6379:us-east-1c
     image: conductor:server
     build:
-      context: ../../
-      dockerfile: docker/server/Dockerfile
+      context: ..
+      dockerfile: server/Dockerfile
     networks:
       - internal
     ports:
@@ -30,8 +31,8 @@ services:
       - WF_SERVER=http://conductor-server:8080
     image: conductor:ui
     build:
-      context: ../../
-      dockerfile: docker/ui/Dockerfile
+      context: ..
+      dockerfile: ui/Dockerfile
     networks:
       - internal
     ports:
