fixes for the containers

--- a/docker/server/config/config-redis.properties
+++ b/docker/server/config/config-redis.properties
@@ -15,6 +15,7 @@ conductor.indexing.enabled=true
 conductor.elasticsearch.url=http://es:9200
 conductor.elasticsearch.indexName=conductor
 conductor.elasticsearch.version=7
+conductor.elasticsearch.clusterHealthColor=yellow
 
 # Additional modules for metrics collection exposed to Prometheus (optional)
 conductor.metrics-prometheus.enabled=true
