Fix: include monaco sources into bundle

--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -20,7 +20,9 @@ RUN apk add --update nodejs npm yarn
 
 COPY . /conductor
 WORKDIR /conductor/ui
-RUN yarn install && yarn build
+# Include monaco sources into bundle (instead of using CDN)
+ENV REACT_APP_MONACO_EDITOR_USING_CDN=false
+RUN yarn install && cp -r node_modules/monaco-editor public/ && yarn build
 RUN ls -ltr
 RUN echo "Done building UI"
 
