classifier is deprecated in favor of archiveClassifier - eg: https://github.com/spring-projects/spring-boot/pull/29611/files

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -59,7 +59,7 @@ jar {
 
 bootJar {
     mainClass = 'com.netflix.conductor.Conductor'
-    classifier = 'boot'
+    archiveClassifier = 'boot'
 }
 
 springBoot {
