--- a/server/build.gradle
+++ b/server/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'org.apache.logging.log4j:log4j-web'
+    implementation "redis.clients:jedis:${revJedis}"
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation "io.orkes.queues:orkes-conductor-queues:${revOrkesQueues}"
