--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -50,7 +50,7 @@ ext {
     revRedisson = '3.13.3'
     revRxJava = '1.2.2'
     revSpectator = '0.122.0'
-    revSpock = '1.3-groovy-2.5'
+    revSpock = '2.4-M1-groovy-4.0'
     revSpotifyCompletableFutures = '0.3.3'
     revTestContainer = '1.15.3'
 }
