--- a/annotations-processor/build.gradle
+++ b/annotations-processor/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     api 'com.squareup:javapoet:1.13.+'
     api 'com.github.jknack:handlebars:4.3.+'
     api 'com.google.protobuf:protobuf-java:3.21.7'
-    api 'javax.annotation:javax.annotation-api:1.3.2'
+    api 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     api gradleApi()
 
     exampleImplementation sourceSets.main.output
