--- a/grpc/build.gradle
+++ b/grpc/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation "com.google.protobuf:protobuf-java:${revProtoBuf}"
     implementation "io.grpc:grpc-protobuf:${revGrpc}"
     implementation "io.grpc:grpc-stub:${revGrpc}"
-    implementation "javax.annotation:javax.annotation-api:1.3.2"
+    implementation "jakarta.annotation:jakarta.annotation-api:2.1.1"
 }
 
 def artifactName = 'com.google.protobuf:protoc:3.14.0:osx-x86_64'
