--- a/grpc/build.gradle
+++ b/grpc/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation "io.grpc:grpc-protobuf:${revGrpc}"
     implementation "io.grpc:grpc-stub:${revGrpc}"
     implementation "jakarta.annotation:jakarta.annotation-api:2.1.1"
+    implementation "javax.annotation:javax.annotation-api:1.3.2" //Needs to be added as a workaround for the generated tags
+
 }
 
 def artifactName = 'com.google.protobuf:protoc:3.14.0:osx-x86_64'
