HIX Fix task tests

--- a/http-task/build.gradle
+++ b/http-task/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compileOnly 'org.springframework.boot:spring-boot-starter-web'
 
     implementation "javax.ws.rs:jsr311-api:${revJsr311Api}"
+    implementation("org.apache.httpcomponents.client5:httpclient5:${revApacheHttpComponentsClient5}")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation "org.testcontainers:mockserver:${revTestContainer}"
