--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -31,6 +31,7 @@ ext {
     revGuava = '30.0-jre'
     revHamcrestAllMatchers = '1.8'
     revHealth = '1.1.+'
+    revApacheHttpComponentsClient5 = '5.2.1'
     revJAXB = '4.0.1'
     revJAXRS = '2.1.1'
     revJedis = '3.3.0'
